--- a/webclient/src/components/AppBar.module.css
+++ b/webclient/src/components/AppBar.module.css
@@ -3,18 +3,19 @@
 	justify-content: space-between;
 	align-items: center;
 	background: #0277bd;
+	flex-wrap: wrap;
 }
 
 .link {
 	color: black;
 	text-decoration: none;
-	font-size: 1.3em;
 	font-weight: bold;
 	margin: .4em;
 	padding: .5em;
 	border: solid black 1px;
 	border-radius: 5px;
 	background: #58a5f0;
+	display: inline-block;
 }
 
 .link:hover {
