--- a/webclient/src/notes/components/BaseNote.module.css
+++ b/webclient/src/notes/components/BaseNote.module.css
@@ -2,10 +2,17 @@
 	display: flex;
 	align-items: center;
 	margin-bottom: .5em;
+	flex-wrap: wrap;
+}
+
+.noteActions {
+	display: flex;
+	justify-content: flex-end;
+	flex-grow: 1;
 }
 
 .title {
-	flex-grow: 1;
+	flex-grow: 2;
 }
 
 .note {
